<resources>

    <string name="app_name">HomeContorl</string>

    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="Sign_up">Sign Up</string>

    <string name="create_username">Firstly, create your username</string>
    <string name="create_login">Next, create your login</string>
    <string name="create_password">And, create your password</string>

</resources>
