<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <ImageView
        android:layout_width="231dp"
        android:layout_height="81dp"
        android:layout_marginBottom="@dimen/auth_elements_margin"
        android:fitsSystemWindows="true"
        android:minWidth="60dp"
        android:minHeight="20dp"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toTopOf="@+id/et_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="@dimen/et_auth_width"
        android:layout_height="@dimen/et_auth_height"
        android:layout_marginBottom="@dimen/auth_elements_margin"
        android:background="@drawable/et_auth_background"
        android:fitsSystemWindows="true"
        android:hint="@string/Login"
        android:paddingLeft="@dimen/et_auth_padding"
        android:paddingRight="@dimen/et_auth_padding"
        android:singleLine="true"
        android:textColor="#FFF"
        android:textColorHint="#BEBEBE"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Shomazz" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="@dimen/et_auth_width"
        android:layout_height="@dimen/et_auth_height"
        android:background="@drawable/et_auth_background"
        android:fitsSystemWindows="true"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/et_auth_padding"
        android:paddingRight="@dimen/et_auth_padding"
        android:singleLine="true"
        android:textColor="#FFF"
        android:textColorHint="#BEBEBE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="I Love Nikita" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="170dp"
        android:layout_height="@dimen/et_auth_height"
        android:layout_marginTop="@dimen/auth_elements_margin"
        android:background="@drawable/btn_sign_in_background"
        android:fitsSystemWindows="true"
        android:text="@string/Sign_in"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="100dp"
        android:layout_height="@dimen/et_auth_height"
        android:layout_marginTop="@dimen/auth_elements_margin"
        android:background="@drawable/btn_sign_up_background"
        android:fitsSystemWindows="true"
        android:text="@string/Sign_up"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</android.support.constraint.ConstraintLayout>